waveless: correction bugs: JS: - filters height of container - set filters height sidebar element - set click event in filters devices button CSS: - set height filters element mobile - hide overflow of filters container - reset style navigation desktop

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -28,6 +28,7 @@
     left: -100%;
     height: 100%;
     transition: .2s ease;
+    overflow: hidden;
     z-index: 2000;
 }
 
