--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -120,6 +120,7 @@ nav.nav--is-open {
         min-width: 0;
         background-color: transparent;
         transition: none;
+        transform: none;
 
         display: flex;
         justify-content: space-between;
